fix subheader on smaller screens

--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -1441,6 +1441,10 @@ header {
       font-size: 28px;
       color: white; }
 
+@media only screen and (max-width: 43.75em) {
+  header .subheader {
+    -webkit-flex-direction: column;
+    flex-direction: column; } }
 footer {
   display: -webkit-box;
   /* OLD - iOS 6-, Safari 3.1-6 */
